--- a/sass/main.css
+++ b/sass/main.css
@@ -36,11 +36,67 @@ ul, h1, h2, h3, p {
   padding: 0px;
 }
 
-.container {
+.section {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.container-header {
   margin-left: auto;
   margin-right: auto;
-  padding-right: 16px;
-  padding-left: 16px;
-  width: 1280px;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
   align-items: center;
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: end;
+  margin-left: auto;
+}
+
+.header__nav--list {
+  display: flex;
+  align-items: center;
+}
+
+.nav--item {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #2C2C2C;
+  margin-right: 18px;
+}
+.nav--item:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #BBF330;
+}
+
+.button-nav {
+  display: flex;
+  justify-content: end;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 1.46;
+  text-align: right;
+  color: #2C2C2C;
+  border-radius: 30px;
+  background: #BBF330;
+  border: 1px solid #BBF330;
+  padding: 6px 18px;
+}
+.button-nav:hover {
+  border-radius: 30px;
+  background: none;
+  border: 1px solid rgb(89, 125, 0);
 }/*# sourceMappingURL=main.css.map */
