--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,5 @@
 @import "./variables";
 @import "./header";
+@import "./components/hero";
+@import "./components/offerings";
+@import "./components/favorites";
