--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,4 @@
 @import "./components/hero";
 @import "./components/offerings";
 @import "./components/favorites";
+@import "./components/customers";
