--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,8 +1,10 @@
 
 
-.section {
+.section-hero {
 @include section;
-padding-bottom: 0px
+padding-bottom: 0px;
+padding-top: 0px
+
 
 }
 
@@ -64,12 +66,10 @@ border:1px solid rgba(89, 125, 0, 1)
 .hero--wrap--foto {
 display: flex;
 width: 50%;
+justify-content: flex-end;
 }
 
 .foto--hero {
 border: 26px solid #FFE550;
 border-radius: 50%;
-position: absolute;
-top: 72px;
-
 }
