--- a/sass/main.css
+++ b/sass/main.css
@@ -107,11 +107,12 @@ ul, h1, h2, h3, p {
   border: 1px solid rgb(89, 125, 0);
 }
 
-.section {
+.section-hero {
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
   padding-bottom: 0px;
+  padding-top: 0px;
 }
 
 .container {
@@ -173,13 +174,12 @@ ul, h1, h2, h3, p {
 .hero--wrap--foto {
   display: flex;
   width: 50%;
+  justify-content: flex-end;
 }
 
 .foto--hero {
   border: 26px solid #FFE550;
   border-radius: 50%;
-  position: absolute;
-  top: 72px;
 }
 
 .section-offerings {
@@ -344,4 +344,119 @@ ul, h1, h2, h3, p {
   text-align: center;
   color: #2C2C2C;
   margin-bottom: 40px;
+}
+
+.favorites--list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+
+.favorites--item {
+  width: calc((100% - 96px) / 3);
+  margin-right: 32px;
+  margin-bottom: 32px;
+  background: #FEFEFE;
+  border: 16px solid #FFE550;
+  border-radius: 197px;
+}
+
+.favorites--item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.favorites--item:nth-last-child(-n+3) {
+  margin-bottom: 0px;
+}
+
+.img-favorites {
+  border-radius: 164.5px;
+  padding: 41px;
+}
+
+.section--customers {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  text-align: start;
+  background-image: url(../images/customers.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container--customers {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 200px;
+}
+
+.customers--header {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16;
+  color: #2C2C2C;
+  margin-bottom: 20px;
+}
+
+.customers--text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  color: #2C2C2C;
+  margin-bottom: 32px;
+}
+
+.customers--wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.customers--wrap--item {
+  width: 501px;
+  height: 227px;
+  background: #FEFEFE;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 30px 30px 30px;
+  padding: 14px;
+}
+
+.customers--text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: #2C2C2C;
+}
+
+.customers--name {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
+  color: #2C2C2C;
+}
+
+.customers--position {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #2C2C2C;
 }/*# sourceMappingURL=main.css.map */
