--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -81,3 +81,11 @@ font-size: 14px;
 line-height: 150%;
 color: #2C2C2C;
 }
+.images--boy {
+width: 48px;
+height: 48px;
+}
+
+.customers--wrap--right {
+display: flex;
+}
