--- a/sass/main.css
+++ b/sass/main.css
@@ -459,4 +459,13 @@ ul, h1, h2, h3, p {
   font-size: 14px;
   line-height: 150%;
   color: #2C2C2C;
+}
+
+.images--boy {
+  width: 48px;
+  height: 48px;
+}
+
+.customers--wrap--right {
+  display: flex;
 }/*# sourceMappingURL=main.css.map */
