--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,4 @@
 @import "./components/offerings";
 @import "./components/favorites";
 @import "./components/customers";
+@import "./components/subscribe";
