--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -6,7 +6,7 @@ text-align: start;
 background-image: url(../images/customers.png);
     background-repeat: no-repeat;
     background-size: cover;
-    max-width: 1280px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
 
