--- a/sass/components/_offerings.scss
+++ b/sass/components/_offerings.scss
@@ -3,7 +3,7 @@
 background-image: url(../images/rectangle-offerings.png);
 background-repeat: no-repeat;
 background-size: cover;
-max-width: 1280px;
+max-width: 100%;
 margin-left: auto;
 margin-right: auto;
 
