--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,4 @@
 @import "./components/favorites";
 @import "./components/customers";
 @import "./components/subscribe";
+@import "./components/footer";
