--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,744 @@
-/*# sourceMappingURL=main.css.map */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  background-color: white;
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ul, h1, h2, h3, p {
+  margin: 0px;
+  padding: 0px;
+}
+
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+.container-header {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: end;
+  margin-left: auto;
+}
+
+.header--logo {
+  width: 66px;
+  height: 52px;
+  display: block;
+}
+
+.header__nav--list {
+  display: flex;
+  align-items: center;
+}
+
+.nav--item {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #2C2C2C;
+  margin-right: 18px;
+}
+.nav--item:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #BBF330;
+}
+
+.button--nav {
+  display: flex;
+  justify-content: end;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 1.46;
+  text-align: right;
+  color: #2C2C2C;
+  border-radius: 30px;
+  background: #BBF330;
+  border: 1px solid #BBF330;
+  padding: 6px 18px;
+}
+.button--nav:hover {
+  border-radius: 30px;
+  background: none;
+  border: 1px solid rgb(89, 125, 0);
+}
+
+.section-hero {
+  padding-bottom: 40px;
+  padding-top: 160px;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  text-align: start;
+  display: flex;
+}
+
+.hero--wrap {
+  width: 50%;
+}
+
+.hero--header {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 120%;
+  color: #2C2C2C;
+  margin-bottom: 28px;
+}
+
+.hero--text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2C2C2C;
+  margin-bottom: 40px;
+}
+
+.button--hero {
+  display: flex;
+  justify-content: end;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 1.46;
+  text-align: right;
+  color: #2C2C2C;
+  border-radius: 30px;
+  background: #BBF330;
+  border: 1px solid #BBF330;
+  padding: 6px 18px;
+}
+.button--hero:hover {
+  border-radius: 30px;
+  background: none;
+  border: 1px solid rgb(89, 125, 0);
+}
+
+.hero--wrap--foto {
+  justify-content: flex-end;
+  display: inline-block;
+  position: absolute;
+  right: 32px;
+}
+
+.foto--hero {
+  border: 26px solid #FFE550;
+  border-radius: 50%;
+}
+
+.section-offerings {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+  background-image: url(../images/rectangle-offerings.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -38px;
+  padding-top: 177px;
+}
+
+.container-offerings {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  text-align: start;
+  display: flex;
+  align-items: flex-end;
+}
+
+.container-offerings-foto {
+  width: 50%;
+}
+
+.container-offerings-wrap {
+  width: 50%;
+}
+
+.foto--offer {
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+  padding: 24px;
+}
+
+.offerings--header {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 120%;
+  color: #2C2C2C;
+  margin-bottom: 20px;
+}
+
+.offerings--text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2C2C2C;
+  margin-bottom: 40px;
+}
+
+.offerings--wrap {
+  display: flex;
+}
+
+.offerings--header--second {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 140%;
+  color: #2C2C2C;
+  margin-bottom: 16px;
+}
+
+.offerings--text--second {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #2C2C2C;
+  margin-bottom: 32px;
+}
+
+.button--offerings {
+  border-radius: 30px;
+  background: #FFFFFF;
+  border: 2px solid #7EB101;
+  padding: 6px 18px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 150%;
+  color: #2C2C2C;
+}
+.button--offerings:hover {
+  border: 2px solid #597D00;
+}
+
+.wrap--delivery::before {
+  display: block;
+  content: "";
+  height: 48px;
+  width: 48px;
+  background-size: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  background-image: url(../images/rocket.svg);
+  margin-bottom: 8px;
+}
+
+.wrap--order::before {
+  display: block;
+  content: "";
+  height: 48px;
+  width: 48px;
+  background-size: 32px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  background-image: url(../images/touch.svg);
+  margin-bottom: 8px;
+}
+
+.section--favorites {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+}
+
+.container--favorites {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  text-align: center;
+}
+
+.favorites--header {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16;
+  text-align: center;
+  color: #2C2C2C;
+  margin-bottom: 20px;
+}
+
+.favorites--text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  color: #2C2C2C;
+  margin-bottom: 40px;
+}
+
+.favorites--list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+
+.favorites--item {
+  width: calc((100% - 96px) / 3);
+  margin-right: 32px;
+  margin-bottom: 32px;
+  background: #FEFEFE;
+  border: 16px solid #FFE550;
+  border-radius: 197px;
+}
+.favorites--item:hover {
+  border: 16px solid #BBF330;
+}
+
+.favorites--item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.favorites--item:nth-last-child(-n+3) {
+  margin-bottom: 0px;
+}
+
+.img-favorites {
+  border-radius: 164.5px;
+  padding: 41px;
+}
+
+.section--customers {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  text-align: start;
+  background-image: url(../images/customers.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container--customers {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 200px;
+}
+
+.customers--header {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 1.16;
+  color: #2C2C2C;
+  margin-bottom: 20px;
+}
+
+.customers--text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.18;
+  color: #2C2C2C;
+  margin-bottom: 32px;
+}
+
+.customers--wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.customers--wrap--item {
+  width: 501px;
+  height: 227px;
+  background: #FEFEFE;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 30px 30px 30px;
+  padding: 14px;
+}
+
+.customers--text--wrap {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: #2C2C2C;
+  margin-bottom: 42px;
+}
+
+.customers--text--wrap::before {
+  display: block;
+  content: "";
+  height: 16px;
+  width: 101px;
+  background-size: 101px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #FFFFFF;
+  background-image: url(../images/stars.svg);
+  margin-bottom: 28px;
+}
+
+.image {
+  border: 2px solid #FFE550;
+  border-radius: 50%;
+}
+
+.customers--name {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
+  color: #2C2C2C;
+}
+
+.customers--position {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #2C2C2C;
+}
+
+.images--boy {
+  width: 48px;
+  height: 48px;
+}
+
+.customers--wrap-foto {
+  display: flex;
+}
+
+.customers--wrap-foto::after {
+  border: 1px solid #7EB101;
+  content: "";
+  margin-left: 16px;
+}
+
+.wrap--name {
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
+  justify-content: center;
+}
+
+.section-subscribe {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+  background: #F5F5F5;
+  padding-top: 0px;
+  padding-bottom: 65px;
+  margin-top: -64px;
+}
+
+.container-subscribe {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  text-align: start;
+  background: #F5F5F5;
+  display: flex;
+  align-items: normal;
+}
+
+.subscribe-wrap {
+  width: 50%;
+}
+
+.subscribe-wrap-foto {
+  width: 50%;
+}
+
+.subscribe-header {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 120%;
+  color: #2C2C2C;
+  margin-bottom: 20px;
+}
+
+.subscribe-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2C2C2C;
+  margin-bottom: 24px;
+}
+
+.subscribe-input {
+  background: none;
+  border: 0.854167px solid #FFE550;
+  border-radius: 30px;
+  padding: 12px 57px 12px 11px;
+  color: #505050;
+}
+
+.button-sub {
+  border: #BBF330;
+  background: #BBF330;
+  border-radius: 30px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 150%;
+  color: #2C2C2C;
+  padding: 11px 22px;
+}
+.button-sub:hover {
+  background: #B5FF00;
+}
+
+.section--footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  text-align: start;
+  background-image: url(../images/fruit-footer.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container--footer {
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  width: 1250px;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.footer-wrap {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 80px;
+}
+
+.footer-nav-list {
+  display: inline-flex;
+  margin-right: auto;
+  margin-left: 148px;
+  align-items: center;
+}
+
+.footer-wrap-logo {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #2C2C2C;
+}
+.nav-item:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #BBF330;
+}
+
+.footer-nav-item:nth-child(-n+4) {
+  margin-right: 28px;
+}
+
+.footer-nav-item:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #BBF330;
+}
+
+.footer-sub {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+}
+
+.footer-policy {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-footer {
+  display: flex;
+}
+
+.list-policy {
+  display: flex;
+}
+
+.header-sub {
+  Font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 150%;
+  color: #2C2C2C;
+  margin-bottom: 15px;
+}
+
+.subscribe-input {
+  background: none;
+  border: 0.854167px solid #FFE550;
+  border-radius: 30px;
+  padding: 12px 57px 12px 11px;
+  color: #505050;
+}
+
+.but-sub {
+  background: #FFFFFF;
+  border: 0.854167px solid #7EB101;
+  border-radius: 30px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 150%;
+  color: #2C2C2C;
+  padding: 11px 22px;
+  margin-left: 13px;
+}
+.but-sub:hover {
+  background: #FFFFFF;
+  border: 0.854167px solid #597D00;
+  border-radius: 30px;
+}
+
+.footer-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #2C2C2C;
+  margin-top: 12px;
+}
+
+.footer-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  color: #2C2C2C;
+}
+
+.policy-link {
+  color: #7eb101;
+  text-decoration: underline;
+}
+
+.list-policy-link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #7EB101;
+}
+
+.list-policy-item:nth-child(-n+2) {
+  margin-right: 20px;
+}
