--- a/sass/components/_offerings.scss
+++ b/sass/components/_offerings.scss
@@ -6,7 +6,8 @@ background-size: cover;
 max-width: 100%;
 margin-left: auto;
 margin-right: auto;
-
+margin-top: -38px;
+padding-top: 177px;
 }
 
 .container-offerings {
