--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@
 @import "./components/customers";
 @import "./components/subscribe";
 @import "./components/footer";
+@import "./components/mobile-menu";
