--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,29 +1,30 @@
-.icon-close-black:hover{
-fill: #2196F3;
-}
-.icon-close-black:focus{
-fill: #2196F3;
-}
+
 
 .menu-container{
+@media screen and (min-width: 320px) and (max-width: 767px) {
 position: fixed;
 top: 0;
 left: 0;
-width: 100vw;
-height: 100vh;
-padding: 32px;
-background-color: rgba(255, 255, 255, 1);
+width: 50vw;
+background-color: #FEFEFE;
 z-index: 999;
-transform: translateX(100%);
+transform: translateX(200%);
 overflow-y: scroll;
 display: flex;
 flex-direction: column;
+box-shadow: 0px 4px 24px rgba(105, 105, 105, 0.1);
+border-radius: 30px 0px 30px 30px;}
+
+
 
 &.is-open {
-@media screen and (min-width: 0px) and (max-width: 767px) {
-transform: translateX(0);
-}}
-transition: transform 250ms ease-in-out;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+transform: translateX(100%);
+transition: transform 250ms ease-in-out;}}
+
+@media screen and (min-width: 768px) {
+display: none;}
+
 }
 
 
@@ -35,93 +36,60 @@ list-style: none;
 display: flex;
 flex-direction: column;
 margin-bottom: auto;;
-}}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-.menu-toggle {
-display: flex;
 }
-}
-
-@media screen and (min-width: 768px){
-.menu-toggle {
+@media screen and (min-width: 768px)  {
 display: none;
 }
+
 }
 
+
 .menu-toggle {
+@media screen and (min-width: 320px) and (max-width: 767px) {
 border: none;
 background-color: rgba(255, 255, 255, 1);
 padding: 0;
 margin-left: auto;
+    width: 24px;
+    height: 24px;
+    z-index: 999;
+    background-color: rgba(0,0,0,0);
+    border: rgba(0,0,0,0);
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    display: flex;
+    position: absolute;
+    top: 4px;
+    right: 4px;}
 
 }
 
-.mobile-menu-item{
+.menu-toggle {
+@media screen and (min-width: 768px) {
+display: none;
+}
+}
+
+.mobile-menu-link{
 font-family: 'Roboto';
 font-style: normal;
-font-weight: 500;
-font-size: 40px;
-line-height: 1.17;
-letter-spacing: 0.02em;
-color: #212121;
-
-&:hover,
-&:focus {
-color: #2196F3;
-}
-}
-
-.mobile-menu-item:not(:last-child){
-margin-bottom: 32px;
-}
-
-
-.mobile-menu-contact{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
+font-weight: 400;
+font-size: 16px;
 line-height: 1.16;
-letter-spacing: 0.02em;
-color: #757575;
+color: #000000;
+
+
+}
+
+.mobile-menu-item {
+padding: 16px;
 
 &:hover,
 &:focus {
-color: #2196F3;
+background-color: #BBF330;
 }
 }
-
-.contacts{
-margin-top: 302px;
-}
-
-.mobile-menu-social{
-display: flex;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 1.22;
-letter-spacing: 0.02em;
-color: #2196F3;
-margin-top: 64px;
-flex-wrap: wrap;
-}
-
-.mobile-menu-contact:not(:last-child){
-margin-bottom: 32px;
-}
-
-.menu-social-item:not(:last-child)::after{
-content:"";
-width: 22px;
-height: 0px;
-border: 1px solid rgba(33, 33, 33, 0.2);
-transform: rotate(90deg);
-margin-left: 10px;
-margin-right: 10px;
-}
-
 
 
