--- a/sass/main.css
+++ b/sass/main.css
@@ -53,11 +53,23 @@ ul, h1, h2, h3, p {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .container-header {
+    display: flex;
+    padding: 22px 20px;
+    width: 100%;
+  }
+}
 
 .header__nav {
   display: flex;
   justify-content: end;
   margin-left: auto;
+}
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .header__nav {
+    display: none;
+  }
 }
 
 .header--logo {
@@ -69,6 +81,11 @@ ul, h1, h2, h3, p {
 .header__nav--list {
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .header__nav--list {
+    display: none;
+  }
 }
 
 .nav--item {
@@ -105,6 +122,11 @@ ul, h1, h2, h3, p {
   border-radius: 30px;
   background: none;
   border: 1px solid rgb(89, 125, 0);
+}
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .button--nav {
+    display: none;
+  }
 }
 
 .section-hero {
@@ -743,32 +765,31 @@ ul, h1, h2, h3, p {
   margin-right: 20px;
 }
 
-.icon-close-black:hover {
-  fill: #2196F3;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50vw;
+    background-color: #FEFEFE;
+    z-index: 999;
+    transform: translateX(200%);
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 4px 24px rgba(105, 105, 105, 0.1);
+    border-radius: 30px 0px 30px 30px;
+  }
 }
-
-.icon-close-black:focus {
-  fill: #2196F3;
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background-color: rgb(255, 255, 255);
-  z-index: 999;
-  transform: translateX(100%);
-  overflow-y: scroll;
-  display: flex;
-  flex-direction: column;
-  transition: transform 250ms ease-in-out;
-}
-@media screen and (min-width: 0px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container.is-open {
-    transform: translateX(0);
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
   }
 }
 
@@ -782,81 +803,52 @@ ul, h1, h2, h3, p {
     margin-bottom: auto;
   }
 }
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-toggle {
+    border: none;
+    background-color: rgb(255, 255, 255);
+    padding: 0;
+    margin-left: auto;
+    width: 24px;
+    height: 24px;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0);
+    border: rgba(0, 0, 0, 0);
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
     display: flex;
+    position: absolute;
+    top: 4px;
+    right: 4px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .menu-toggle {
     display: none;
   }
 }
-.menu-toggle {
-  border: none;
-  background-color: rgb(255, 255, 255);
-  padding: 0;
-  margin-left: auto;
+
+.mobile-menu-link {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.16;
+  color: #000000;
 }
 
 .mobile-menu-item {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  color: #212121;
+  padding: 16px;
 }
 .mobile-menu-item:hover, .mobile-menu-item:focus {
-  color: #2196F3;
-}
-
-.mobile-menu-item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu-contact {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.16;
-  letter-spacing: 0.02em;
-  color: #757575;
-}
-.mobile-menu-contact:hover, .mobile-menu-contact:focus {
-  color: #2196F3;
-}
-
-.contacts {
-  margin-top: 302px;
-}
-
-.mobile-menu-social {
-  display: flex;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  color: #2196F3;
-  margin-top: 64px;
-  flex-wrap: wrap;
-}
-
-.mobile-menu-contact:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.menu-social-item:not(:last-child)::after {
-  content: "";
-  width: 22px;
-  height: 0px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-  margin-left: 10px;
-  margin-right: 10px;
+  background-color: #BBF330;
 }/*# sourceMappingURL=main.css.map */
