--- a/sass/main.css
+++ b/sass/main.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
 }
 
-img {
+.logo__img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -602,46 +602,128 @@ ul, h1, h2, h3, p {
   background: #B5FF00;
 }
 
-.section--footer {
-  padding-top: 100px;
-  padding-bottom: 100px;
-  text-align: center;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  text-align: start;
-  background-image: url(../images/fruit-footer.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .section--footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: start;
+    background-image: url(../images/fruit-footer.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .section--footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    text-align: start;
+    background-image: url(../images/fruit-footer.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .section--footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    text-align: start;
+    background-image: url(../images/fruit-footer.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-.container--footer {
-  margin-left: auto;
-  margin-right: auto;
-  padding-right: 15px;
-  padding-left: 15px;
-  width: 1250px;
-  align-items: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .container--footer {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 1250px;
+    align-items: center;
+    padding-left: 32px;
+    padding-right: 32px;
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .container--footer {
+    padding-left: 20px;
+    padding-right: 20px;
+    max-width: 1280px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container--footer {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 1250px;
+    align-items: center;
+  }
 }
 
-.footer-wrap {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 80px;
+.logo__link {
+  width: 66px;
+  height: 52px;
+  display: block;
 }
 
-.footer-nav-list {
-  display: inline-flex;
-  margin-right: auto;
-  margin-left: 148px;
-  align-items: center;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-wrap {
+    display: block;
+    margin-bottom: 80px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .footer-wrap {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 80px;
+  }
 }
 
-.footer-wrap-logo {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-nav-list {
+    display: inline-flex;
+    margin-right: auto;
+    margin-left: 148px;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .footer-nav-list {
+    display: inline-flex;
+    margin-right: auto;
+    margin-left: 148px;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .footer-nav-list {
+    display: inline-flex;
+    margin-right: auto;
+    margin-left: 148px;
+    align-items: center;
+  }
+}
+
+.logo__container--footer {
   display: flex;
   align-items: center;
 }
@@ -660,10 +742,16 @@ ul, h1, h2, h3, p {
   color: #BBF330;
 }
 
-.footer-nav-item:nth-child(-n+4) {
-  margin-right: 28px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-nav-item:nth-child(-n+4) {
+    margin-bottom: 20px;
+  }
 }
-
+@media screen and (min-width: 768px) {
+  .footer-nav-item:nth-child(-n+4) {
+    margin-right: 28px;
+  }
+}
 .footer-nav-item:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -674,6 +762,11 @@ ul, h1, h2, h3, p {
   display: flex;
   flex-direction: column;
   margin-left: auto;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-sub {
+    margin-top: 40px;
+  }
 }
 
 .footer-policy {
@@ -698,32 +791,98 @@ ul, h1, h2, h3, p {
   color: #2C2C2C;
   margin-bottom: 15px;
 }
-
-.subscribe-input {
-  background: none;
-  border: 0.854167px solid #FFE550;
-  border-radius: 30px;
-  padding: 12px 57px 12px 11px;
-  color: #505050;
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .header-sub {
+    Font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 150%;
+    color: #2C2C2C;
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
 }
 
-.but-sub {
-  background: #FFFFFF;
-  border: 0.854167px solid #7EB101;
-  border-radius: 30px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 150%;
-  color: #2C2C2C;
-  padding: 11px 22px;
-  margin-left: 13px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .subscribe-input {
+    width: 100%;
+    background: none;
+    border: 0.854167px solid #FFE550;
+    border-radius: 30px;
+    padding: 12px 57px 12px 11px;
+    color: #505050;
+  }
 }
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .subscribe-input {
+    background: none;
+    border: 0.854167px solid #FFE550;
+    border-radius: 30px;
+    padding: 12px 57px 12px 11px;
+    color: #505050;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-input {
+    background: none;
+    border: 0.854167px solid #FFE550;
+    border-radius: 30px;
+    padding: 12px 57px 12px 11px;
+    color: #505050;
+  }
+}
+
 .but-sub:hover {
   background: #FFFFFF;
   border: 0.854167px solid #597D00;
   border-radius: 30px;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .but-sub {
+    background: #FFFFFF;
+    border: 0.854167px solid #7EB101;
+    border-radius: 30px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 150%;
+    color: #2C2C2C;
+    padding: 11px 22px;
+    margin-top: 20px;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .but-sub {
+    background: #FFFFFF;
+    border: 0.854167px solid #7EB101;
+    border-radius: 30px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 150%;
+    color: #2C2C2C;
+    padding: 11px 22px;
+    margin-left: 13px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .but-sub {
+    background: #FFFFFF;
+    border: 0.854167px solid #7EB101;
+    border-radius: 30px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 150%;
+    color: #2C2C2C;
+    padding: 11px 22px;
+    margin-left: 13px;
+  }
 }
 
 .footer-text {
@@ -735,14 +894,10 @@ ul, h1, h2, h3, p {
   color: #2C2C2C;
   margin-top: 12px;
 }
-
-.footer-text {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  color: #2C2C2C;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer-text {
+    margin-top: 20px;
+  }
 }
 
 .policy-link {
