--- a/sass/main.css
+++ b/sass/main.css
@@ -920,6 +920,36 @@ ul, h1, h2, h3, p {
   margin-right: 20px;
 }
 
+.footer-policy {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  display: flex;
+}
+@media screen and (min-width: 768px) {
+  .footer-policy {
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-top: 40px;
+    align-items: center;
+  }
+}
+
+.footer-text-policy {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #2C2C2C;
+}
+@media screen and (min-width: 768px) {
+  .footer-text-policy {
+    margin-left: auto;
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .menu-container {
     position: fixed;
