--- a/sass/components/_favorites.scss
+++ b/sass/components/_favorites.scss
@@ -37,6 +37,7 @@ margin-bottom: 40px;
 display: flex;
 flex-wrap: wrap;
 margin-top: 40px;
+justify-content: center;
 }
 
 
@@ -65,4 +66,5 @@ margin-bottom: 0px;
 .img-favorites{
 border-radius: 164.5px;
 padding: 41px;
+max-width: 100%;
 }
