--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -83,3 +83,8 @@ border:1px solid rgba(89, 125, 0, 1)
 display: none;
 }
 }
+
+.logo__img {
+    display: block;
+    max-width: 100%;
+    height: auto;}
